# multiperson

./: .gitignore  README.md  pyproject.toml
multiperson/: __init__.py  main.py  multiperson.py  scratch_work.py
multiperson/assets/sample_data/: freemocap_sample_data_camera_calibration.toml
multiperson/data_models/: camera_collection.py
multiperson/feature_matching/: n_matcher.py  stereo_matcher.py  test.py
multiperson/geometry/: calculate_distance_to_lines.py  epipolar_geometry.py  homogenize_points.py
multiperson/tests/: test_calculate_distance_to_lines.py  test_calculate_epipolar_lines.py  test_distance_from_line.py  test_essential_matrix.py  test_fundamental.py  test_fundamental_matrix.py  test_homogenize_points.py  test_relative_rotation_translation.py
multiperson/utilities/: display.py  get_synchronized_frames.py  read_calibration_toml.py  video_io.py
multiperson/visualization/: aaron_scatter_3d.py
